--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,7 +48,10 @@
 }
 
 :root {
-  --background: oklch(1 0 0);
+  --background: oklch(0.96 0 0);
+  --background-muted: oklch(0.97 0 0);
+  --background-soft: oklch(0.94 0 0);
+
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
@@ -83,7 +86,10 @@
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
+  --background: oklch(0.1 0 0);
+  --background-muted: oklch(0.18 0 0);
+  --background-soft: oklch(0.25 0 0);
+
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
@@ -120,9 +126,24 @@
   * {
     @apply border-border outline-ring/50;
   }
-  body {
-    @apply bg-background text-foreground;
-  }
+body {
+  @apply text-foreground;
+
+  background-color: var(--background);
+  background-image:
+    radial-gradient(
+      1200px 600px at 50% -200px,
+      var(--background-muted),
+      transparent 60%
+    ),
+    linear-gradient(
+      180deg,
+      var(--background-soft),
+      var(--background)
+    );
+
+  background-attachment: fixed;
+}
 
   :root {
     --nav-height: 4rem;
@@ -133,6 +154,7 @@
       --nav-height: 4.5rem;
     }
   }
+
 }
 
 @layer utilities {
